<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_small_8"
        android:paddingEnd="@dimen/padding_small_8"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/dialog_character_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/character_image"
            android:padding="@dimen/padding_small_8" />

        <TextView
            android:id="@+id/character_name"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/character_description"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearances_label" />

        <TextView
            android:id="@+id/character_appearances_comics"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            style="@style/Letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_details_label" />

        <TextView
            android:id="@+id/character_details_link"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_the_comics_label" />

        <TextView
            android:id="@+id/character_comics_link"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
